--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>ラッキーパネル補助ツール (iOS完全対応)</title>
+<title>ラッキーパネル補助ツール</title>
 <style>
     body {
         font-family: "Helvetica Neue", Arial, sans-serif;
@@ -414,3 +414,4 @@
 
 </body>
 </html>
+
