--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>ラッキーパネル補助ツール</title>
+<link rel="icon" href="LuckyPanel_favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="LuckyPanel_favicon.png">
 <style>
     body {
         font-family: "Helvetica Neue", Arial, sans-serif;
@@ -414,4 +416,5 @@
 
 </body>
 </html>
+
 
