--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -151,9 +151,8 @@
     .bg-G { background-color: #a3d07d; }
     .bg-H { background-color: #ffc0cb; }
     .bg-I { background-color: #b3e5fc; }
-    /* 新規追加カラー */
-    .bg-J { background-color: #d1c4e9; } /* 薄紫 */
-    .bg-K { background-color: #b2dfdb; } /* 薄ティール */
+    .bg-J { background-color: #d1c4e9; }
+    .bg-K { background-color: #fbfff0; }
 
     .bg-star { background-color: #fff176; color: #f57f17; border: 2px solid #fbc02d; }
     .bg-close { background-color: #e1bee7; color: #8e44ad; font-weight: 900; }
@@ -419,3 +418,4 @@
 
 </body>
 </html>
+
