--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -156,8 +156,8 @@
     .bg-G { background-color: #a3d07d; }
     .bg-H { background-color: #ffc0cb; }
     .bg-I { background-color: #b3e5fc; }
-    .bg-J { background-color: #d1c4e9; }
-    .bg-K { background-color: #fbfff0; } /* 指定色へ変更 */
+    .bg-J { background-color: #d6d2db; }
+    .bg-K { background-color: #fbfff0; }
 
     /* ★と〆 */
     .bg-star { 
@@ -427,3 +427,4 @@
 
 </body>
 </html>
+
