--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -146,7 +146,7 @@
         border: 2px solid #e9ecef; 
     }
     
-    /* --- カラーパレット更新 --- */
+    /* カラーパレット */
     .bg-A { background-color: #ff97a2; }
     .bg-B { background-color: #85abf1; }
     .bg-C { background-color: #f7cf86; }
@@ -156,7 +156,7 @@
     .bg-G { background-color: #a3d07d; }
     .bg-H { background-color: #ffc0cb; }
     .bg-I { background-color: #b3e5fc; }
-    .bg-J { background-color: #d6d2db; }
+    .bg-J { background-color: #d1c4e9; }
     .bg-K { background-color: #fbfff0; }
 
     /* ★と〆 */
@@ -382,7 +382,7 @@
         const moveX = Math.abs(touch.clientX - touchStartX);
         const moveY = Math.abs(touch.clientY - touchStartY);
 
-        if (moveX > 10 || moveY > 10) {
+        if (moveX > 5 || moveY > 5) {
             isDraggingMode = true;
         }
 
@@ -427,4 +427,3 @@
 
 </body>
 </html>
-
