--- a/TEST_LuckyPanel.html
+++ b/TEST_LuckyPanel.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>ラッキーパネル補助ツール1</title>
+<title>ラッキーパネル補助ツール21</title>
 <link rel="icon" href="LuckyPanel_favicon.png" type="image/png">
 <link rel="apple-touch-icon" href="LuckyPanel_favicon.png">
 
@@ -116,7 +116,7 @@
         box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     }
     #resetBtn { background-color: #adbb9f ; } /* #6c757d */
-    #nextBtn { background-color: #00ffbf ; } /* #007bff */
+    #nextBtn { background-color: #009772 ; } /* #007bff */
 
     .status-bar { font-weight: bold; height: 1.5em; color: #555; display: flex; align-items: center; text-shadow: 1px 1px 0 rgba(255,255,255,0.5); }
     .next-char { color: #d35400; font-size: 1.2em; margin-left: 5px; }
@@ -288,7 +288,7 @@
 
     <div class="layout-container">
         <div class="area-title">
-            <h1>ラッキーパネル補助ツール1</h1>
+            <h1>ラッキーパネル補助ツール21</h1>
         </div>
         
         <div class="area-modes">
