--- a/TEST_LuckyPanel.html
+++ b/TEST_LuckyPanel.html
@@ -74,7 +74,7 @@
 
     .portrait-hint {
         font-size: 0.8rem;
-        color: #c0392b; /* 背景がベージュなので見やすい赤に変更 */
+        color: #ffbbff;
         text-align: center;
         margin-top: 8px;
         font-weight: bold;
