--- a/TEST_LuckyPanel.html
+++ b/TEST_LuckyPanel.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>ラッキーパネル補助ツール</title>
+<title>ラッキーパネル補助ツール2</title>
 <link rel="icon" href="LuckyPanel_favicon.png" type="image/png">
 <link rel="apple-touch-icon" href="LuckyPanel_favicon.png">
 
@@ -389,7 +389,7 @@
 
     <div class="layout-container">
         <div class="area-title">
-            <h1>ラッキーパネル補助ツール</h1>
+            <h1>ラッキーパネル補助ツール2</h1>
         </div>
         
         <div class="area-modes">
