--- a/TEST_LuckyPanel.html
+++ b/TEST_LuckyPanel.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <title>ラッキーパネル補助ツール</title>
 
 <link rel="icon" href="LuckyPanel_favicon.png" type="image/png">
@@ -248,7 +251,9 @@
             width: 100%;
             height: 100vh;
             max-width: none;
-            padding: 5px 10px;
+            /* padding: 5px 10px; */
+            /* 上・左右はそのまま、下に「iPhoneのセーフエリア」分の余白を追加 */
+            padding: 5px 10px calc(5px + env(safe-area-inset-bottom)) 10px;
             column-gap: 20px; 
             row-gap: 2px;
         }
