--- a/TEST_LuckyPanel.html
+++ b/TEST_LuckyPanel.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<title>ラッキーパネル補助ツール</title>
+<title>TEST_ラッキーパネル補助ツール</title>
 
 <link rel="icon" href="LuckyPanel_favicon.png" type="image/png">
 <link rel="apple-touch-icon" href="LuckyPanel_favicon.png">
@@ -253,7 +253,7 @@
             max-width: none;
             /* padding: 5px 10px; */
             /* 上・左右はそのまま、下に「iPhoneのセーフエリア」分の余白を追加 */
-            padding: 5px 10px calc(5px + env(safe-area-inset-bottom)) 10px;
+            padding: 5px 10px 20px 10px;
             column-gap: 20px; 
             row-gap: 2px;
         }
@@ -388,7 +388,7 @@
 
     <div class="layout-container">
         <div class="area-title">
-            <h1>ラッキーパネル補助ツール3</h1>
+            <h1>ラッキーパネル補助ツール4</h1>
         </div>
         
         <div class="area-modes">
