--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -21,6 +21,7 @@
 
     body {
         font-family: "Helvetica Neue", Arial, sans-serif;
+        background-color: #f2e6d6;
         background-image: 
             repeating-linear-gradient(90deg, 
                 rgba(160, 120, 60, 0.05) 0px, 
@@ -61,7 +62,7 @@
     /* ヒントメッセージ */
     .portrait-hint {
         font-size: 0.8rem;
-        color: #c5ab9a;
+        color: #c0392b;
         text-align: center;
         margin-top: 8px;
         font-weight: bold;
@@ -248,7 +249,9 @@
             width: 100%;
             height: 100vh;
             max-width: none;
-            padding: 5px 10px;
+            /* padding: 5px 10px; */
+            /* 上・左右はそのまま、下に「iPhoneのセーフエリア」分の余白を追加 */
+            padding: 5px 5px 50px 5px;
             column-gap: 20px; 
             row-gap: 2px;
         }
@@ -383,7 +386,7 @@
 
     <div class="layout-container">
         <div class="area-title">
-            <h1>ラッキーパネル補助ツール</h1>
+            <h1>ラッキーパネル補助ツール6</h1>
         </div>
         
         <div class="area-modes">
