--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -386,7 +386,7 @@
 
     <div class="layout-container">
         <div class="area-title">
-            <h1>ラッキーパネル補助ツール6</h1>
+            <h1>ラッキーパネル補助ツール</h1>
         </div>
         
         <div class="area-modes">
@@ -674,3 +674,4 @@
 
 </body>
 </html>
+
