--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -389,7 +389,7 @@
 
     <div class="layout-container">
         <div class="area-title">
-            <h1>ラッキーパネル補助ツール6</h1>
+            <h1>ラッキーパネル補助ツール</h1>
         </div>
         
         <div class="area-modes">
@@ -416,7 +416,8 @@
 
         <div class="area-grid">
             <div class="grid-board" id="grid"></div>
-            <div class="portrait-hint">※横向き推奨</div>
+            <div class="portrait-hint">※ホーム画面に追加（Webアプリとして開く）</div>
+            <div class="portrait-hint">　→　横向き推奨？</div>
         </div>
     </div>
 
@@ -709,3 +710,4 @@
 
 </body>
 </html>
+
