--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -416,7 +416,8 @@
 
         <div class="area-grid">
             <div class="grid-board" id="grid"></div>
-            <div class="portrait-hint">※ホーム画面に追加（Webアプリとして開く）推奨（横向きがry）/div>
+            <div class="portrait-hint">※ホーム画面に追加（Webアプリとして開く）推奨？</div>
+            <div class="portrait-hint">（横向きもあry）</div>
         </div>
     </div>
 
@@ -713,3 +714,4 @@
 
 </body>
 </html>
+
