--- a/Luckypanel.html
+++ b/Luckypanel.html
@@ -570,9 +570,9 @@
             if (current !== '★' && current !== '〆') {
                 // 配列の2番目と同じ文字なら「1つ目」
                 if (supplyQueue[1] === current) {
-                    displayText += ' （１つ目）';
+                    displayText += '-1';
                 } else {
-                    displayText += ' （２つ目）';
+                    displayText += '-2';
                 }
             }
 
@@ -714,4 +714,5 @@
 
 </body>
 </html>
+
 
